Added - Config submit button

--- a/res/layout/view_config.xml
+++ b/res/layout/view_config.xml
@@ -10,7 +10,9 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/scrollView"
-        android:layout_gravity="center_horizontal" >
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:fillViewport="false">
 
         <LinearLayout
             android:orientation="vertical"
@@ -34,7 +36,7 @@
 
                 <EditText
                     android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="fill_parent"
                     android:id="@+id/robot_name"
                     android:hint="@string/robot_name_hint"
                     android:inputType="text" />
@@ -197,5 +199,14 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_config"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:layout_marginTop="5dp" />
 
 </LinearLayout>
