--- a/res/layout/view_main.xml
+++ b/res/layout/view_main.xml
@@ -4,20 +4,15 @@
     android:id="@+id/view_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#0022ff"
-    android:orientation="vertical">
+    android:background="#000000"
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="I'm screen 1 (activity_main.xml)"
+        android:text="Main Screen."
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Click me to another screen" />
 
 </LinearLayout>
