--- a/res/layout/view_main.xml
+++ b/res/layout/view_main.xml
@@ -2,9 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_main"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#000000"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:gravity="center">
 </LinearLayout>
