--- a/sensors_driver/res/layout/view_main.xml
+++ b/sensors_driver/res/layout/view_main.xml
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ViewFlipper
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:gravity="center">
-</ViewFlipper>
+
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/view_main_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/titleTextGPS"
+        android:layout_width = "fill_parent"
+        android:layout_height = "fill_parent"
+        android:gravity="right|top"
+        android:textColor="#FFF"
+        android:textSize="20sp" />
+
+
+</FrameLayout>
